Forgot that I disabled the command locally